--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
-    "start": "docusaurus build && docusaurus serve --port 8080",
+    "start": "docusaurus start --port 8080",
     "dev": "docusaurus start --port 8080",
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
