--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
-    "start": "docusaurus start --port 8080",
-    "dev": "docusaurus start --port 8080",
+    "start": "export $(cat .env | xargs) && docusaurus start --port 8080",
+    "clean": "rm -rf node_modules && yarn install",
+    "dev": "export $(cat .env | xargs) && docusaurus start --port 8080",
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
@@ -21,12 +22,15 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mdx-js/react": "^1.6.22",
+    "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.8.6",
     "clsx": "^1.1.1",
     "docusaurus-gtm-plugin": "^0.0.2",
+    "framer-motion": "^7.5.3",
     "prism-react-renderer": "^1.3.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "usehooks-ts": "^2.7.2"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^2.0.1",
